# astToolFactory

./: CITATION.cff  README.md  context7.json  dataframe.ipynb  pyproject.toml  ruff.toml
.github/scripts/: sync_cpython_asdl.py
.github/workflows/: sync_cpython_asdl.yml  updateCitation.yml
Z0Z_development/: _astTypes.py  astMinimalArgumentsOfficial.py  ast_Unparser_parser.py  codeexamplesusingastToolkit.py  mutationable.py
astToolFactory/: __init__.py  _datacenter.py  _datacenterAnnex.py  _datacenterDataframe.py  _datacenter_annex.py  _prototypeFind.py  _semiotics.py  _snippets.py  _theSSOT.py  _theSSOTannex.py  _theTypes.py  datacenter.py  dataframeAST.parquet  dataframeAST.pkl  dataframeAccess.ipynb  dataframeViewer.ipynb  docstrings.py  documentation.py  documentationBe.py  documentationClassIsAndAttribute.py  documentationDOT.py  documentationGrab.py  documentationMake.py  factory.py  factory3.py  factoryAnnex.py  factory_annex.py
astToolFactory/_documentationAnnex/: Be.py  DOT.py  Grab.py  Make.py  astTypes.py
astToolFactory/_warehouse/: diminutive2etymology.py  map2PythonDelimiters.py  map2PythonKeywords.py  map2PythonOperators.py
astToolFactory/cpython/: __init__.py  extract_match_args_unified.py  get_match_args.py  sync_cpython_asdl.py
astToolFactory/datacenter/: __init__.py  _dataServer.py  _dataframeAST.pkl  _dataframeUpdate.py  _dataframeUpdateAnnex.py  dataframeViewer.ipynb  probeInterpreter.cmd  probeInterpreter.csv  probeInterpreter.py
astToolFactory/documentation/: __init__.py  documentationBe.py  documentationGrab.py  documentationMake.py  warehouse.py
astToolFactory/warehouse/: .editorconfig  documentationBe.py  documentationDOT.py  documentationGrab.py  documentationMake.py
citations/: CITATION.cff
tests/: test_basic.py
