[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Other Audience",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Typing :: Typed",]
dependencies = [
	"astToolkit==0.3.4",
	"mypy",
	"pandas",
	"pandas-stubs",
	"pyarrow",
	"pyupgrade",
	"tomli",
	"Z0Z_tools",]
description = ""
keywords = []
license = { 'text' = "CC-BY-NC-4.0" }
name = "astToolFactory"
optional-dependencies = { testing = [
	"mypy",
	"pytest",
	"pytest-cov",
	"pytest-xdist",
	"pyupgrade",] }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/astToolFactory", Repository = "https://github.com/hunterhogan/astToolFactory.git" }
version = "0.0.1"

[tool.coverage]
report = { exclude_lines = [
	"if TYPE_CHECKING:",
	"if __name__ == \"__main__\":",
], ignore_errors = false }
run = { branch = true, concurrency = [
	"multiprocessing",
], data_file = "tests/coverage/.coverage", omit = [
	"tests/*",
], parallel = true, source = [
	".",] }
xml = { output = "tests/coverage/coverage.xml" }

[tool.pytest.ini_options]
log_auto_indent = true
addopts = ["--color=auto"]
testpaths = ["tests"]

[tool.setuptools]
package-data = { "*" = ["py.typed"] }
packages = { find = {} }

[tool.updateCitation]
filenameCitationDOTcff = 'CITATION.cff'
pathFilenameCitationSSOT = "citations/CITATION.cff"
